# verse

./: .env.example  .gitignore  README.md  io.github.TanmayPatil105.verse.json  meson.build  python3-requirements.json  python3-requirements.json.json  requirements.txt
.github/workflows/: flatpak.yml
data/: io.github.TanmayPatil105.verse.desktop.in  io.github.TanmayPatil105.verse.gschema.xml  io.github.TanmayPatil105.verse.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: lyrics-view.ui  main.py  meson.build  style.css  verse.gresource.xml  verse.in  view.py  window.py  window.ui
src/api/: lyrics.py  spotify.py
src/gtk/: help-overlay.ui
src/lib/: html.py  utils.py
src/utils/: secrets.py  utils.py
src/views/: lyrics_view.py  lyrics_view.ui  verse_preferences.py  verse_preferences.ui
wiki/: .env  README.md  main.py  requirements.txt
